--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,40 @@
-version: '3.8'
 services:
   server:
     container_name: server
-    build: ./server
+    build: ./docker/Dockerfile.server
     ports:
-      - "3000:3000"
+      - '3001:3001'
     env_file:
       - ./server/.env
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - JWT_SECRET=${JWT_SECRET}
-      - APP_URL=${APP_URL}
+
+  socket:
+    container_name: socket
+    build: ./docker/Dockerfile.socket
+    ports:
+      - '8000:8000'
+    env_file:
+      - ./socket/.env
+
+  client:
+    container_name: client
+    build: ./docker/Dockerfile.client
+    ports:
+      - '3000:3000'
+    env_file:
+      - ./client/.env
+
+  database:
+    container_name: database
+    build: ./docker/Dockerfile.database
+    ports:
+      - '3306:3306'
+    env_file:
+      - ./docker/db/.env
+    volumes:
+      - ./docker/db/data:/var/lib/mysql
+volumes:
+  db-data:
+    driver: local
+    driver_opts:
+      device: ./docker/db/data
 
