--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,9 @@
-DATABASE_URL=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME="nonstoptalk"
+DATABASE_PORT=3306
+
 JWT_SECRET=
-APP_URL=
+APP_URL="http://localhost:3000"
+PORT=3001
