--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
 services:
   server:
     container_name: server
-    build: ./docker/Dockerfile.server
+    depends_on:
+      - db
+    build: ./server
     ports:
       - '3001:3001'
     env_file:
       - ./server/.env
+    volumes:
+      # crie um volume anonimo para o node_modules
+      - /usr/src/app/node_modules
 
   socket:
     container_name: socket
-    build: ./docker/Dockerfile.socket
+    build: ./socket
     ports:
       - '8000:8000'
     env_file:
@@ -17,24 +22,32 @@ services:
 
   client:
     container_name: client
-    build: ./docker/Dockerfile.client
+    build: ./client
     ports:
       - '3000:3000'
     env_file:
       - ./client/.env
 
-  database:
-    container_name: database
-    build: ./docker/Dockerfile.database
+  db:
+    container_name: db
+    image: mysql:8.0.35
+    restart: unless-stopped
     ports:
-      - '3306:3306'
+      - '3307:3306'
     env_file:
       - ./docker/db/.env
     volumes:
       - ./docker/db/data:/var/lib/mysql
+      - ./docker/db/dump:/docker-entrypoint-initdb.d
+
 volumes:
   db-data:
     driver: local
     driver_opts:
       device: ./docker/db/data
+  # crie um volume anonimo para o node_modules
+  node_modules:
+  
+  
+
 
