feat(README): atualizando README.md

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
-DATABASE_HOST=
-DATABASE_USER=
-DATABASE_PASSWORD=
+DATABASE_HOST=db
+DATABASE_USER=root
+DATABASE_PASSWORD=abc123
 DATABASE_NAME="nonstoptalk"
 DATABASE_PORT=3306
 
-JWT_SECRET=
+JWT_SECRET=mKduhBdfgfdC**xSer75ty2jk,lk35J6
 APP_URL="http://localhost:3000"
 PORT=3001
